Fix Sequence column alignment

--- a/xgds_planner2/static/xgds_planner2/css/planner.css
+++ b/xgds_planner2/static/xgds_planner2/css/planner.css
@@ -1,3 +1,7 @@
+#tab-content{
+    padding-left: 20px;
+}
+
 .nav-tabs li:hover{
     cursor: pointer;
 }
